[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasktracker"
version = "0.1.0"
description = "A command-line tool for managing tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyright>=1.1.408",
    "ruff>=0.14.10",
]

[project.scripts]
task-cli = "tasktracker.cli:main"