[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasktracker"
version = "0.1.0"
description = "A command-line tool for managing tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
task-cli = "tasktracker.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
